syntax = "proto3";
package vire.utility;

import "vire/utility/BasePayload.proto";

message BaseRequest {

  BasePayload _base = 1;

}